--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,15 @@ python = "3.11.3"
 pytest = "^7.4.3"
 pandas = "^2.1.2"
 openpyxl = "^3.1.2"
+isort = "^5.12.0"
+blue = "^0.9.1"
+pydocstyle = "^6.3.0"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
+known_third_party = []
