--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ openpyxl = "^3.1.2"
 isort = "^5.12.0"
 blue = "^0.9.1"
 pydocstyle = "^6.3.0"
+pip-audit = "^2.6.1"
+taskipy = "^1.12.0"
 
 
 [build-system]
@@ -23,3 +25,6 @@ build-backend = "poetry.core.masonry.api"
 [tool.isort]
 profile = "black"
 known_third_party = []
+
+[tool.taskipy.tasks]
+format = "isort . && blue ."
