--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,11 @@ blue = "^0.9.1"
 pydocstyle = "^6.3.0"
 pip-audit = "^2.6.1"
 taskipy = "^1.12.0"
+mkdocs = "^1.5.3"
+mkdocstrings-python = "^1.7.3"
+pygments = "^2.16.1"
+mkdocs-material = "^9.4.7"
+pymdown-extensions = "^10.3.1"
 
 
 [build-system]
@@ -28,3 +33,6 @@ known_third_party = []
 
 [tool.taskipy.tasks]
 format = "isort . && blue ."
+test = "poetry run pytest -v"
+run = "python3 app/main.py"
+kill = "kill -9 $(lsof -t -i :8000)"
