--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ mkdocstrings-python = "^1.7.3"
 pygments = "^2.16.1"
 mkdocs-material = "^9.4.7"
 pymdown-extensions = "^10.3.1"
+pre-commit = "^3.5.0"
 
 
 [build-system]
